# ad_keycloak

./: .editorconfig  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  sonar.properties
ad_auth/: pytest_plugin.py
ad_auth/provider/: __init__.py  i_provider.py  keycloak.py
ad_keycloak/: __init__.py  connector.py  exceptions.py  keycloak_client.py  pytest_plugin.py  token.py
tests/: conftest.py  realm.json  test_keycloak_client.py  test_perms.py  test_resource_side_permissions_check.py  test_token.py
